Fix margins and add align items to body

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -5,6 +5,7 @@
   min-height: 80px;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
   gap: 1em;
 }
 
@@ -13,7 +14,6 @@
   font-weight: 900;
   color: tomato;
   background: white;  padding: 4px 32px;
-  align-self: center;
 }
 
 
@@ -22,15 +22,9 @@
   display: flex;
   gap: 1em;
   max-width: 100%;
-}
-
-.left-links ul {
-  margin: 0;
+  align-items: center;
+  margin: 0px 10px;
   padding-inline-start: 0px;
-}
-
-.right-links{
-  margin: 0;
 }
 
 a {
